Correção dos repositorios.

--- a/src/Eluander.Infra.Identity/Eluander.Infra.Identity.csproj
+++ b/src/Eluander.Infra.Identity/Eluander.Infra.Identity.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Eluander.Domain.Identity\Eluander.Domain.Identity.csproj" />
+    <ProjectReference Include="..\Eluander.Shared.Core\Eluander.Shared.Core.csproj" />
   </ItemGroup>
 
 </Project>
