--- a/src/Eluander.Presentation.MVC/appsettings.json
+++ b/src/Eluander.Presentation.MVC/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "ADD_SUA_CREDENCIAL_GOOGLE_ID_AQUI",
+      "ClientSecret": "ADD_SUA_CREDENCIAL_GOOGLE_SECRET_AQUI"
+    }
+  }
 }
