Habilitando o Envio de Emails.

--- a/src/Eluander.Presentation.MVC/appsettings.json
+++ b/src/Eluander.Presentation.MVC/appsettings.json
@@ -12,5 +12,14 @@
       "ClientId": "ADD_SUA_CREDENCIAL_GOOGLE_ID_AQUI",
       "ClientSecret": "ADD_SUA_CREDENCIAL_GOOGLE_SECRET_AQUI"
     }
+  },
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "From": "eluander@gmail.com",
+    "FromUserName": "Sistema",
+    "PasswordUsername": "SUA_SENHA_AQUI",
+    "ToEmail": "eluander@gmail.com",
+    "CcEmail": "eluander@gmail.com"
   }
 }
