Foi incluída a autenticação via JWT.

--- a/src/Eluander.Presentation.MVC/appsettings.json
+++ b/src/Eluander.Presentation.MVC/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "Authentication": {
+    "JwtBearer": {
+      "Secret": "ADD_SUA_CHAVE_JWT_BEARER"
+    },
     "Google": {
       "ClientId": "ADD_SUA_CREDENCIAL_GOOGLE_ID_AQUI",
       "ClientSecret": "ADD_SUA_CREDENCIAL_GOOGLE_SECRET_AQUI"
