--- a/src/Eluander.Presentation.MVC/Eluander.Presentation.MVC.csproj
+++ b/src/Eluander.Presentation.MVC/Eluander.Presentation.MVC.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>de88607f-bb89-4015-a140-6ae9991b1ecc</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>G:\Eluander\Dev\magios-pay-core\src\Eluander.Presentation.MVC\Eluander.Presentation.MVC.xml</DocumentationFile>
+    <DocumentationFile>C:\dev\aspnet-core-identity-fluentnhib\src\Eluander.Presentation.MVC\Eluander.Presentation.MVC.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
